# yolo-gradio-app

./: README.md  app.py  pyproject.toml
scripts/: yolo.py
src/: main.py
yolo_gradio_app/: main.py
