[project]
name = "yolo-gradio-app"
version = "0.1.0"
description = "Training YOLO models from Gradio WebUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0.2",
    "torch>=2.4.1",
    "torchvision>=0.1.6",
    "ultralytics>=8.3.10",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
